--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 *{
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
   color: #ffffff;
+  font-family: Space Mono;
 }
 body{
   background-color: #dddddd;
